--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*font-family: 'Days One', sans-serif;*/
 
 
 body {
@@ -5,3 +6,35 @@ body {
 	background-repeat: no-repeat;
 }
 
+h1 {
+	font-family: 'Days One', sans-serif;
+	padding-top: 40px;
+	text-transform: uppercase;
+	font-size: 50px;
+}
+
+input, textarea {
+    margin: 10px;
+    padding: 15px;
+    width: 92%;
+    border-radius: 15px;
+}
+
+.container {
+	text-align: center;
+}
+
+.btn-primary {
+	font-family: 'Days One', sans-serif;
+	text-transform: uppercase;
+	background-color: #E5E500;
+	color: #000000;
+	font-size: 20px;
+}
+
+#display {
+	display: block;
+	text-align: center;
+	font-size: 30px;
+	font-family: sans-serif;
+}
