--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,13 @@ input, textarea {
 	background-color: #E5E500;
 	color: #000000;
 	font-size: 20px;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.space {
+	display: block;
+	padding-bottom: 10px;
 }
 
 #display {
